[gd_scene load_steps=8 format=3 uid="uid://dxcu08sgbyylr"]

[ext_resource type="Script" path="res://scripts/health_component.gd" id="1_hgtuj"]
[ext_resource type="Script" path="res://scripts/playerbody.gd" id="1_qqke5"]
[ext_resource type="PackedScene" uid="uid://0py6gtps6jdo" path="res://scenes/psx_first_person_arms.tscn" id="2_8a1dm"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0kd7y"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ibc3c"]

[sub_resource type="BoxShape3D" id="BoxShape3D_v078u"]
size = Vector3(5.355, 4.899, 8.45)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qmjj8"]

[node name="Playerbody" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_qqke5")

[node name="HealthComponent" type="Node3D" parent="."]
script = ExtResource("1_hgtuj")

[node name="PlayerMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_0kd7y")
skeleton = NodePath("")

[node name="PlayerShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ibc3c")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.693524, 0.283112)
fov = 90.0

[node name="Pickup" type="RayCast3D" parent="Head/Camera3D" groups=["pickup"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0246967, 0)
target_position = Vector3(0, -1, -5)
collision_mask = 11
collide_with_areas = true

[node name="Attack" type="RayCast3D" parent="Head/Camera3D" groups=["attack"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0186222, 0)
target_position = Vector3(0, -1, -5)

[node name="Sketchfab_Scene" parent="Head/Camera3D" instance=ExtResource("2_8a1dm")]
transform = Transform3D(-0.67, 0, -1.01167e-07, 0, 0.67, 0, 1.01167e-07, 0, -0.67, 0.0448688, -3.10975, -0.100283)

[node name="Hold" type="Node3D" parent="Head/Camera3D" groups=["hold"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.329677, -1.45979)

[node name="itemdrop" type="Area3D" parent="Head/Camera3D"]

[node name="itemdropshape" type="CollisionShape3D" parent="Head/Camera3D/itemdrop"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.712031, -5.89465)
shape = SubResource("BoxShape3D_v078u")

[node name="PlayerHitbox" type="Area3D" parent="."]
transform = Transform3D(1.51, 0, 0, 0, 1.51, 0, 0, 0, 1.51, 0, 0, 0)

[node name="PlayerHitboxShape" type="CollisionShape3D" parent="PlayerHitbox"]
shape = SubResource("CapsuleShape3D_qmjj8")

[connection signal="body_exited" from="Head/Camera3D/itemdrop" to="." method="_on_itemdrop_body_exited"]
[connection signal="body_entered" from="PlayerHitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="PlayerHitbox" to="." method="_on_player_hitbox_body_exited"]
